syntax = "proto3";

package sonosbridge;

option go_package = "github.com/brotherlogic/sonosbridge/proto";

message VolumeChangeRequest {
    bool increase = 1;
}

message Config {
    string client = 1;
    string secret = 2;
    string code = 3;

    Token token = 4;
}

message Token {
    string token = 1;
    int64 expire_time = 2;
    string refresh = 3;
    string token_type = 4;
}

message SetConfigRequest {
    string client = 1;
    string secret = 2;
    string code = 3;
}

message SetConfigResponse {}

message GetConfigRequest {}

message GetConfigResponse {
    Config config = 1;
}

message GetAuthUrlRequest {}
message GetAuthUrlResponse {
    string url = 1;
}

message GetTokenRequest {}
message GetTokenResponse {
    Token token = 1;
}

service SonosBridgeService {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse) {};
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {};
  rpc GetAuthUrl(GetAuthUrlRequest) returns (GetAuthUrlResponse) {};
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {};
}